--- a/_posts/2021-01-14-si-susi.md
+++ b/_posts/2021-01-14-si-susi.md
@@ -1,17 +1,21 @@
 ---
 title:  "서시 - 윤동주"
 excerpt: "윤동주 시인의 작품 모음 - 서시"
+toc: true
+toc_sticky: true
 
 categories:
   - 윤동주
+  - cloud
+  - ai
 tags:
   - 서시
   - 윤동주
-  - 시
+  - cloud
 last_modified_at: 2021-01-14T08:06:00-05:00
 ---
 
-서시
+## 1. 서시
 
 죽는 날까지 하늘을 우러러  
 한점 부끄럼이 없기를,  
@@ -23,3 +27,7 @@ last_modified_at: 2021-01-14T08:06:00-05:00
 걸어가야겠다.  
 
 오늘밤에도 별이 바람에 스치운다.
+
+## 2. 테스트
+
+## 3. 테스트2
