--- a/_posts/2021-01-18-캐글가이드.md
+++ b/_posts/2021-01-18-캐글가이드.md
@@ -10,7 +10,7 @@ tags:
   - 독서
 last_modified_at: 2019-04-17T08:06:00-05:00
 ---
-![title](https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200701_2%2F1593587692923oRvKv_JPEG%2F1052217653831685_1523104267.jpg&type=a340)
+![title](https://search.pstatic.net/common/?src=http%3A%2F%2Fshop1.phinf.naver.net%2F20200701_2%2F1593587692923oRvKv_JPEG%2F1052217653831685_1523104267.jpg&type=a340){: .align-center}
 
 
 ## 캐글가이드 - 사카모토 유시도키
