--- a/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
+++ b/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
@@ -5,9 +5,9 @@ toc: true
 toc_sticky: true
 
 categories:
-  - 클라우드
+  - Cloud
 tags:
-  -네이버클라우드플랫폼
+  - 네이버클라우드플랫폼
 last_modified_at: 2021-01-21T08:07:00-08:00
 ---
 
@@ -17,7 +17,7 @@ last_modified_at: 2021-01-21T08:07:00-08:00
 <br>
 우선 전반적인 Cloud Computing을 알아야 NCP를 쉽게 이해할수 있다고 생각합니다.<br>
 해당 웹페이지를 만들기전에 제가 예전에 정리해놓은 Cloud Computing에 대한 전반적인 내용인데요. 아래 링크를 참고하시면 감사하겠습니다. <br>
-[박문규 네이버블로그](https://blog.naver.com/mk_crew/222075444353)
+[Cloud Computing 정리](https://blog.naver.com/mk_crew/222075444353)
 
 
 ## NCP의 성장
