--- a/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
+++ b/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
@@ -1,13 +1,15 @@
 ---
 title:  "네이버클라우드플랫폼 개요"
+permalink: /cloud/
 excerpt: "네이버클라우드플랫폼 파헤치기 1편- "
 toc: true
 toc_sticky: true
 
 categories:
-  - cloud
+  - 클라우드
 tags:
-  - cloud
+  - 네이버클라우드플랫폼
+
   
 last_modified_at: 2021-01-21T08:07:00-08:00
 ---
