--- a/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
+++ b/_posts/2021-01-21-네이버클라우드플랫폼 1편.md
@@ -1,17 +1,13 @@
 ---
 title:  "네이버클라우드플랫폼 개요"
-permalink: /categories/cloud/
-layout: category
-taxonomy: cloud
 excerpt: "네이버클라우드플랫폼 파헤치기 1편 "
 toc: true
 toc_sticky: true
 
 categories:
-  - 클라우드
+  - cloud
 tags:
-  - 네이버클라우드플랫폼
-
+  - cloud
   
 last_modified_at: 2021-01-21T08:07:00-08:00
 ---
