--- a/_posts/2021-03-25-네이버클라우드플랫폼 기술자격시험.md
+++ b/_posts/2021-03-25-네이버클라우드플랫폼 기술자격시험.md
@@ -11,7 +11,8 @@ tags:
   
 last_modified_at: 2021-03-06T08:07:00-08:00
 ---
-![자격증](/Users/mooongs/Desktop/GitHub Desktop/park-moonkyu.github.io/cert.png)
+![title](https://github.com/park-moonkyu/park-moonkyu.github.io/blob/main/cert.png){: .align-center}
+
 
 ## 네이버클라우드플랫폼 기술자격증
 ### NCP Associate 
