--- a/_posts/2021-03-25-네이버클라우드플랫폼 기술자격시험.md
+++ b/_posts/2021-03-25-네이버클라우드플랫폼 기술자격시험.md
@@ -11,7 +11,7 @@ tags:
   
 last_modified_at: 2021-03-06T08:07:00-08:00
 ---
-![title](https://github.com/park-moonkyu/park-moonkyu.github.io/blob/main/cert.png){: .align-center}
+<img width="838" alt="cert" src="https://user-images.githubusercontent.com/41941627/112358085-5848e780-8d13-11eb-9e9a-ae61a4263bb8.png">
 
 
 ## 네이버클라우드플랫폼 기술자격증
